--- a/Areas/Admin/Views/Managers/Crup.cshtml
+++ b/Areas/Admin/Views/Managers/Crup.cshtml
@@ -76,8 +76,8 @@
         </div>
         <div class="row my-1">
 
-            <label asp-for="Managers.ManagerId"></label>
-            <select asp-for="Managers.ManagerId" asp-items="@Model.DistrictMunicipality" class="form-control">
+            <label asp-for="Managers.DistMunId"></label>
+            <select asp-for="Managers.DistMunId" asp-items="@Model.DistrictMunicipality" class="form-control">
                 <option disabled selected>--Manager select </option>
 
 
