--- a/Areas/Admin/Views/Employees/Crup.cshtml
+++ b/Areas/Admin/Views/Employees/Crup.cshtml
@@ -93,9 +93,9 @@
         </div>
         <div class="row my-1">
 
-            <label asp-for="Employees.EmployeesId"></label>
-            <select asp-for="Employees.EmployeesId" asp-items="@Model.Managers" class="form-control">
-                <option disabled selected>--Employees select </option>
+            <label asp-for="Employees.ManagerId"></label>
+            <select asp-for="Employees.ManagerId" asp-items="@Model.Managers" class="form-control">
+                <option disabled selected>--Manager select </option>
 
 
             </select>
