--- a/Areas/Admin/Views/Managers/Crup.cshtml
+++ b/Areas/Admin/Views/Managers/Crup.cshtml
@@ -78,7 +78,7 @@
 
             <label asp-for="Managers.DistMunId"></label>
             <select asp-for="Managers.DistMunId" asp-items="@Model.DistrictMunicipality" class="form-control">
-                <option disabled selected>--Manager select </option>
+                <option disabled selected>--Municipality select </option>
 
 
             </select>
