--- a/Areas/Admin/Views/User/Index.cshtml
+++ b/Areas/Admin/Views/User/Index.cshtml
@@ -66,8 +66,8 @@
                 <h1>Welcome to Imperial studios</h1>
                 <h2>We create <span class="typed" data-typed-items="beautiful graphics, functional websites, working mobile apps"></span></h2>
                 <div class="actions">
-                    <a href="#about" class="btn-get-started">Get Strated</a>
-                    <a href="#services" class="btn-services">Our Services</a>
+                    <a href="@Url.Action("SignUp", "Account", new { area = "Admin" })" class="btn-get-started">Kaydol</a>
+                    <a href="@Url.Action("Login", "Account", new { area = "Admin" })" class="btn-services">Giriş</a>
                 </div>
             </div>
         </div>
