--- a/Areas/Admin/Views/Managers/Index.cshtml
+++ b/Areas/Admin/Views/Managers/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Municipality.Model.Managers>
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutMan.cshtml";
 }
 <div class="container">
     <div class="row">
