--- a/Areas/Admin/Views/Account/SignUp.cshtml
+++ b/Areas/Admin/Views/Account/SignUp.cshtml
@@ -1,9 +1,182 @@
 ﻿@model Municipality.Model.ViewModels.LoginSignUpViewModel
 @{
     ViewData["Title"] = "SignUp";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutSignUp.cshtml";
 }
-<div class="container">
+
+
+<!-- Section: Design Block -->
+<section class="background-radial-gradient overflow-hidden">
+    <style>
+        .background-radial-gradient {
+            background-color: hsl(218, 41%, 15%);
+            background-image: radial-gradient(650px circle at 0% 0%, hsl(218, 41%, 35%) 15%, hsl(218, 41%, 30%) 35%, hsl(218, 41%, 20%) 75%, hsl(218, 41%, 19%) 80%, transparent 100%), radial-gradient(1250px circle at 100% 100%, hsl(218, 41%, 45%) 15%, hsl(218, 41%, 30%) 35%, hsl(218, 41%, 20%) 75%, hsl(218, 41%, 19%) 80%, transparent 100%);
+        }
+
+        .form-input {
+            width: 400px;
+            border-radius: 10px;
+            padding:5px 10px;
+            font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+        }
+
+        .form-label {
+            /*   margin-left:200px;
+                    background-color: hsl(218, 41%, 15%);
+                    color:white;
+                    margin-top:5px;
+                    border-radius:20px;
+                    width:300px;*/
+            padding-left: 120px;
+           
+            width: 320px;
+            height: 30px;
+            color: white;
+            /*            background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
+        */
+            background-color: hsl(218, 41%, 15%);
+            border-radius: 20px;
+            padding-top: 2px;
+            margin-top: 5px;
+            margin-left: 40px;
+        }
+
+        #radius-shape-1 {
+            height: 220px;
+            width: 220px;
+            top: -60px;
+            left: -130px;
+            background: radial-gradient(#44006b, #ad1fff);
+            overflow: hidden;
+        }
+
+        #radius-shape-2 {
+            border-radius: 38% 62% 63% 37% / 70% 33% 67% 30%;
+            bottom: -60px;
+            right: -110px;
+            width: 300px;
+            height: 300px;
+            background: radial-gradient(#44006b, #ad1fff);
+            overflow: hidden;
+        }
+
+        .bg-glass {
+            background-color: hsla(0, 0%, 100%, 0.9) !important;
+            backdrop-filter: saturate(200%) blur(25px);
+        }
+    </style>
+
+    <div class="container px-4 py-5 px-md-5 text-center text-lg-start my-5">
+        <div class="row gx-lg-5 align-items-center mb-5">
+            <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
+                <h1 class="my-5 display-5 fw-bold ls-tight" style="color: hsl(218, 81%, 95%)">
+                    The best offer <br />
+                    <span style="color: hsl(218, 81%, 75%)">for your business</span>
+                </h1>
+                <p class="mb-4 opacity-70" style="color: hsl(218, 81%, 85%)">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Temporibus, expedita iusto veniam atque, magni tempora mollitia
+                    dolorum consequatur nulla, neque debitis eos reprehenderit quasi
+                    ab ipsum nisi dolorem modi. Quos?
+                </p>
+            </div>
+
+            <div class="col-lg-6 mb-5 mb-lg-0 position-relative">
+                <div id="radius-shape-1" class="position-absolute rounded-circle shadow-5-strong"></div>
+                <div id="radius-shape-2" class="position-absolute shadow-5-strong"></div>
+
+                <div class="card bg-glass">
+                    <div class="card-body px-4 py-5 px-md-5">
+                        <form method="post" asp-action="SignUp">
+                            <!-- 2 column grid layout with text inputs for the first and last names -->
+                            <div class="row">
+                                <div class="form-group col-md-6 mb-4">
+                                    <div class="form-outline">
+                                        <input type="text" asp-for="UserName" class="form-input" placeholder="Enter username" id="form3Example1" autocomplete="off" />
+                                        <br />
+                                        <label asp-for="UserName" class="form-label" for="form3Example1">Username</label>
+                                    </div>
+                                </div>
+
+
+
+                                <!-- Email input -->
+                                <div class="form-group form-outline mb-4">
+                                    <input type="email" asp-for="Email" class="form-input" placeholder="Enter Mail" id="form3Example3" autocomplete="off" />
+                                    <br />
+                                    <label asp-for="Email" class="form-label" for="form3Example3"></label>
+
+
+                                </div>
+                                <div class="form-group col-md-6 mb-4">
+                                    <div class="form-outline">
+                                        <input type="text" asp-for="Mobile" class="form-input" placeholder="Enter mobile" id="form3Example2" autocomplete="off" />
+                                        <br />
+                                        <label asp-for="Mobile" class="form-label" for="form3Example2">Mobile</label>
+                                    </div>
+                                </div>
+
+                                <!-- Password input -->
+                                <div class="form-group form-outline mb-4">
+
+                                    <input type="password" asp-for="Password" class="form-input" id="form3Example4" placeholder="Enter Password" autocomplete="off" />
+                                    <br />
+                                    <label asp-for="Password" class="form-label" for="form3Example4"></label>
+                                    @*        <input type="password" id="form3Example4" class="form-control" />
+                                    <label class="form-label" for="form3Example4">Password</label>*@
+                                </div>
+                                <br />
+                                <div class="form-group form-group">
+
+                                    <input type="password" asp-for="ConfirmPassword" class="form-input" id="form3Example5" placeholder="Enter ConfirmPassword" autocomplete="off" />
+                                    <br />
+                                    <label asp-for="ConfirmPassword" class="form-label" for="form3example5"></label>
+                                </div>
+
+                                <br />
+
+                                <!-- Checkbox -->
+                                <div class="form-group form-check d-flex justify-content-center mb-4">
+                                    <input class="form-check-input me-2" type="checkbox" value="" id="form2Example33" checked />
+                                    <label class="form-check-label" for="form2Example33">
+                                        Subscribe to our newsletter
+                                    </label>
+                                </div>
+                                <br />
+                                <!-- Submit button -->
+                                <button type="submit" class="btn btn-primary btn-block mb-4">
+                                    Sign up
+                                </button>
+
+                                <!-- Register buttons -->
+                                <div class="text-center">
+                                    <p>or sign up with:</p>
+                                    <button type="button" class="btn btn-link btn-floating mx-1">
+                                        <i class="fab fa-facebook-f"></i>
+                                    </button>
+
+                                    <button type="button" class="btn btn-link btn-floating mx-1">
+                                        <i class="fab fa-google"></i>
+                                    </button>
+
+                                    <button type="button" class="btn btn-link btn-floating mx-1">
+                                        <i class="fab fa-twitter"></i>
+                                    </button>
+
+                                    <button type="button" class="btn btn-link btn-floating mx-1">
+                                        <i class="fab fa-github"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Section: Design Block -->
+@*<div class="container">
     <div class="row">
         <div class="col-6 offset-3 border border-primary rounded pl-5 pr-5 pb-5">
             <div class="text-center">
@@ -51,5 +224,5 @@
             </form>
         </div>
     </div>
-</div>
+</div>*@
 
