--- a/Areas/Admin/Views/Managers/Index.cshtml
+++ b/Areas/Admin/Views/Managers/Index.cshtml
@@ -8,6 +8,8 @@
         <div class="col-6">
             <h2>Managers List</h2>
         </div>
+
+
         <div class="col-6">
             <a asp-controller="Managers" asp-action="Crup" class="btn btn-primary">
                 <span>Manager Add</span>
@@ -16,8 +18,17 @@
         </div>
     </div>
 
+    @* search*@
 
-
+    @using (Html.BeginForm("Index", "Managers"))
+    {
+ 
+        @Html.TextBox("managerSearch",null,new { placeholder="Enter the name of the manager to search for...", style="margin-left:400px;  width:400px;"})
+        <span class="input-group-addon"><i class="fa fa-search"></i></span>
+              <br />
+        <input type="submit" value="Arama" style="margin-left:400px;  width:400px; margin-top:10px;" />
+    }
+   
     <div class="row">
         <table class="table table-bordered table-striped my-2">
 
