--- a/Areas/Admin/Views/User/Index.cshtml
+++ b/Areas/Admin/Views/User/Index.cshtml
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Imperial Bootstrap Template</title>
+    <title>Municipality of Rochester</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -60,11 +60,12 @@
         <div class="hero-container">
             <div data-aos="fade-in">
                 <div class="hero-logo">
-                    <img class="" src="~/UserTemplate/assets/img/logo.png" alt="Imperial">
-                </div>
-
-                <h1>Welcome to Imperial studios</h1>
-                <h2>We create <span class="typed" data-typed-items="beautiful graphics, functional websites, working mobile apps"></span></h2>
+                  @*  <img class="" src="~/UserTemplate/assets/img/logo.png" alt="">*@
+                    <img style="border-radius:20px; width:50px; height:50px;" src="~/img/rochestericon.png" />
+              </div>
+              
+                <h1>Welcome to Municipality of Rochester</h1>
+                <h2>New <span class="typed" data-typed-items="activities, services, expert staffs"></span></h2>
                 <div class="actions">
                     <a href="@Url.Action("SignUp", "Account", new { area = "Admin" })" class="btn-get-started">Kaydol</a>
                     <a href="@Url.Action("Login", "Account", new { area = "Admin" })" class="btn-services">Giriş</a>
@@ -75,9 +76,11 @@
     <!-- ======= Header ======= -->
     <header id="header" class="d-flex align-items-center">
         <div class="container d-flex align-items-center justify-content-between">
-
-            <a href="index.html" class="logo mr-auto"><img src="~/UserTemplate/assets/img/logo.png" alt=""></a>
-            <!-- Uncomment below if you prefer to use a text logo -->
+       
+            <a href="@Url.Action("Index", "User", new { area = "Admin" })" class="logo mr-auto"><img style="border-radius:20px; width:50px; height:50px;" src="~/img/rochestericon.png" alt=""></a>
+@*            <a href="index.html" class="logo mr-auto"><img src="~/UserTemplate/assets/img/logo.png" alt=""></a>
+*@           
+        <!-- Uncomment below if you prefer to use a text logo -->
             <!-- <h1 class="logo mr-auto"><a href="index.html">Imperial</a></h1> -->
 
            
@@ -94,9 +97,9 @@
             <div class="container" data-aos="fade-up">
                 <div class="row">
                     <div class="col-md-12">
-                        <h3 class="section-title">Our Team</h3>
+                        <h3 class="section-title">Staff Members of Our Municipality</h3>
                         <div class="section-title-divider"></div>
-                        <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+                        <p class="section-description">We serve with all our expert staff</p>
                     </div>
                 </div>
 
