--- a/Areas/Admin/Views/Employees/Crup.cshtml
+++ b/Areas/Admin/Views/Employees/Crup.cshtml
@@ -1,14 +1,14 @@
 ﻿@model Municipality.Model.ViewModels.EmployeesVM
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutEmp.cshtml";
 }
-<div style="margin-left:100px;">
+<div style="margin-left:100px;" >
     <h2>Employees @(Model.Employees.EmployeesId <= 0 ? "Add" : "Edit")</h2>
 
 
 
-    <form method="post" enctype="multipart/form-data">
+    <form method="post" enctype="multipart/form-data" style="margin-right:50px;">
 
         <input asp-for="Employees.EmployeesId" type="hidden" />
         <input asp-for="Employees.Photo" type="hidden" />
@@ -19,7 +19,7 @@
             <div class="row">
                 <div class="col-6">
 
-                    <img src="@Model.Employees.Photo" style="width:250px;" />
+                    <img src="@Model.Employees.Photo" style="width:60px; height:60px;" />
                 </div>
                 <div class="form-check col-6">
                     <label asp-for="Employees.Gender">
