--- a/Areas/Admin/Views/DistrictMunicipality/Edit.cshtml
+++ b/Areas/Admin/Views/DistrictMunicipality/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Municipality.Model.DistrictMunicipality
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutMun.cshtml";
 }
 <div class="container">
     <div class="row">
