--- a/Areas/Admin/Views/DistrictMunicipality/Index.cshtml
+++ b/Areas/Admin/Views/DistrictMunicipality/Index.cshtml
@@ -30,7 +30,7 @@
     }
 
 
-    <div class="row">
+    <div class="row" style="justify-content:center; align-items:center;">
         <table class="table table-bordered table-striped my-2">
             <thead>
                 <tr>
