--- a/Areas/Admin/Views/Employees/Index.cshtml
+++ b/Areas/Admin/Views/Employees/Index.cshtml
@@ -28,7 +28,7 @@
 
 
 
-    <div class="row">
+    <div class="row" style="justify-content:center; align-items:center;">
         <table class="table table-bordered table-striped my-2">
 
             <thead>
@@ -58,7 +58,7 @@
 
 
                     <tr>
-                        <td><img src="@employee.Photo" style="width:80px;" /></td>
+                        <td><img src="@employee.Photo" style="width:60px; height:60px;" /></td>
                         <td>@employee.EmpIdentityNumber</td>
                         <td>@employee.Name</td>
                         <td>@employee.Surname</td>
