Layouts were  designed

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,8 +16,12 @@
                 <div class="carousel-item active" style="background-image: url(~/AdminTemplate/assets/img/slide/slide-1.jpg);">
                     <div class="carousel-container">
                         <div class="carousel-content animate__animated animate__fadeInUp">
-                            <h2>Welcome to <span>Flattern</span></h2>
-                            <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+                            <h2>Discover <span>Rochester</span></h2>
+                        <p>Rochester (map) combines small-town accessibility with big-city services. 
+                            Amidst some of the most beautiful scenery in the United States, residents 
+                            enjoy a housing market known for great bargains, short commute times,
+                            world-class cultural and entertainment offerings and a fast-growing innovation economy poised                        
+                            to thrive in the 21st century.</p>
                             <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>
                         </div>
                     </div>
@@ -27,8 +31,12 @@
                 <div class="carousel-item" style="background-image: url(~/AdminTemplate/assets/img/slide/slide-2.jpg);">
                     <div class="carousel-container">
                         <div class="carousel-content animate__animated animate__fadeInUp">
-                            <h2>Lorem Ipsum Dolor</h2>
-                            <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+                        <h2>A Great Place to Work</h2>
+                        <p>Rochester’s economy benefits from many advantages, including
+                            an ample supply of fresh water from Lake Ontario and the 
+                            pristine Finger Lakes, a central location among the population
+                            centers of the Northeastern United States and the innovative 
+                            foundations laid by such firms as Kodak, Xerox and Bausch and Lomb. </p>
                             <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>
                         </div>
                     </div>
@@ -38,8 +46,15 @@
                 <div class="carousel-item" style="background-image: url(~/AdminTemplate/assets/img/slide/slide-3.jpg);">
                     <div class="carousel-container">
                         <div class="carousel-content animate__animated animate__fadeInUp">
-                            <h2>Sequi ea ut et est quaerat</h2>
-                            <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+                        <h2>A Great Place to Live</h2>
+                        <p>A unique blend of natural and man-made resources and amenities
+                            give Rochester a quality of life that is second to none.
+                            Straddling the Genesee River between the Erie Canal and
+                            Lake Ontario, Rochester offers a natural beauty that is
+                            easily accessible by a network of parks, trails, boat
+                            launches and scenic overlooks. The city is divided into
+                            dozens of distinct neighborhoods and urban villages supported 
+                            by an eclectic mix of stores and restaurants. </p>
                             <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>
                         </div>
                     </div>
@@ -131,6 +146,8 @@
 
             </div>
         </section><!-- End Services Section -->
+
+
         <!-- ======= Portfolio Section ======= -->
         <section id="portfolio" class="portfolio">
             <div class="container">
@@ -149,91 +166,91 @@
                 <div class="row portfolio-container" data-aos="fade-up">
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                        <img src="~/AdminTemplate/assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+                        <img src="~/AdminTemplate/assets/img/portfolio/conference.jpg" class="img-fluid" alt="">
                         <div class="portfolio-info">
                             <h4>App 1</h4>
                             <p>App</p>
-                            <a href="~/AdminTemplate/assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
+                            <a href="~/AdminTemplate/assets/img/portfolio/conference.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
                             <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-                        <img src="~/AdminTemplate/assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+                        <img src="~/AdminTemplate/assets/img/portfolio/council.jpg" class="img-fluid" alt="">
                         <div class="portfolio-info">
                             <h4>Web 3</h4>
                             <p>Web</p>
-                            <a href="~/AdminTemplate/assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
+                        <a href="~/AdminTemplate/assets/img/portfolio/council.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
                             <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                        <img src="~/AdminTemplate/assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+                        <img src="~/AdminTemplate/assets/img/portfolio/forum.jpg" class="img-fluid" alt="">
                         <div class="portfolio-info">
                             <h4>App 2</h4>
                             <p>App</p>
-                            <a href="~/AdminTemplate/assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
+                        <a href="~/AdminTemplate/assets/img/portfolio/forum.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
                             <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                        <img src="~/AdminTemplate/assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+                        <img src="~/AdminTemplate/assets/img/portfolio/Hall.jpg" class="img-fluid" alt="">
                         <div class="portfolio-info">
                             <h4>Card 2</h4>
                             <p>Card</p>
-                            <a href="~/AdminTemplate/assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 2"><i class="bx bx-plus"></i></a>
+                        <a href="~/AdminTemplate/assets/img/portfolio/Hall.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 2"><i class="bx bx-plus"></i></a>
                             <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-                        <img src="~/AdminTemplate/assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+                        <img src="~/AdminTemplate/assets/img/portfolio/center.jpg" class="img-fluid" alt="">
                         <div class="portfolio-info">
                             <h4>Web 2</h4>
                             <p>Web</p>
-                            <a href="~/AdminTemplate/assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 2"><i class="bx bx-plus"></i></a>
+                        <a href="~/AdminTemplate/assets/img/portfolio/center.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 2"><i class="bx bx-plus"></i></a>
                             <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                        <img src="~/AdminTemplate/assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+                        <img src="~/AdminTemplate/assets/img/portfolio/parks.jpg" class="img-fluid" alt="">
                         <div class="portfolio-info">
                             <h4>App 3</h4>
                             <p>App</p>
-                            <a href="~/AdminTemplate/assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 3"><i class="bx bx-plus"></i></a>
+                            <a href="~/AdminTemplate/assets/img/portfolio/parks.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 3"><i class="bx bx-plus"></i></a>
                             <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                        <img src="~/AdminTemplate/assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+                        <img src="~/AdminTemplate/assets/img/portfolio/canal.jpg" class="img-fluid" alt="">
                         <div class="portfolio-info">
                             <h4>Card 1</h4>
                             <p>Card</p>
-                            <a href="~/AdminTemplate/assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 1"><i class="bx bx-plus"></i></a>
+                            <a href="~/AdminTemplate/assets/img/portfolio/canal.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 1"><i class="bx bx-plus"></i></a>
                             <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                        <img src="~/AdminTemplate/assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+                        <img src="~/AdminTemplate/assets/img/portfolio/park2.jpg" class="img-fluid" alt="">
                         <div class="portfolio-info">
                             <h4>Card 3</h4>
                             <p>Card</p>
-                            <a href="~/AdminTemplate/assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 3"><i class="bx bx-plus"></i></a>
+                            <a href="~/AdminTemplate/assets/img/portfolio/park2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 3"><i class="bx bx-plus"></i></a>
                             <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-                        <img src="~/AdminTemplate/assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+                    <img src="~/AdminTemplate/assets/img/portfolio/park3.jpg" class="img-fluid" alt="">
                         <div class="portfolio-info">
                             <h4>Web 3</h4>
                             <p>Web</p>
-                            <a href="~/AdminTemplate/assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
+                        <a href="~/AdminTemplate/assets/img/portfolio/park3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
                             <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                         </div>
                     </div>
@@ -242,6 +259,8 @@
 
             </div>
         </section><!-- End Portfolio Section -->
+      
+        
         <!-- ======= Our Clients Section ======= -->
         <section id="clients" class="clients">
             <div class="container">
