--- a/Views/Shared/_LayoutCommon.cshtml
+++ b/Views/Shared/_LayoutCommon.cshtml
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Flattern Bootstrap Template - Index</title>
+    <title>Municipality Home Page</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -47,8 +47,8 @@
     <section id="topbar" class="d-flex align-items-center">
         <div class="container d-flex justify-content-center justify-content-md-between">
             <div class="contact-info d-flex align-items-center">
-                <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">contact@example.com</a></i>
-                <i class="bi bi-phone d-flex align-items-center ms-4"><span>+1 5589 55488 55</span></i>
+                <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">rochester.city@gmail.com</a></i>
+                <i class="bi bi-phone d-flex align-items-center ms-4"><span>+585-428-5990</span></i>
             </div>
             <div class="social-links d-none d-md-flex align-items-center">
                 <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
@@ -121,8 +121,8 @@
                             A108 Adam Street <br>
                             New York, NY 535022<br>
                             United States <br><br>
-                            <strong>Phone:</strong> +1 5589 55488 55<br>
-                            <strong>Email:</strong> info@example.com<br>
+                            <strong>Phone:</strong> +585-428-5990<br>
+                            <strong>Email:</strong> rochester.city@gmail.com<br>
                         </p>
                     </div>
 
@@ -171,7 +171,7 @@
                     <!-- You can delete the links only if you purchased the pro version. -->
                     <!-- Licensing information: https://bootstrapmade.com/license/ -->
                     <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/flattern-multipurpose-bootstrap-template/ -->
-                    Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                    Designed by <a href="https://bootstrapmade.com/">RochesterClub</a>
                 </div>
             </div>
             <div class="social-links text-center text-md-right pt-3 pt-md-0">
